# security-db-server

./: .env  .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/2023-10-15-221830_create_law_profiles/: down.sql  up.sql
migrations/2023-10-15-223130_create_passports/: down.sql
migrations/2023-10-15-225905_create_files/: up.sql
migrations/2023-10-16-082417_create_chats/: up.sql
migrations/2023-10-21-235005_chat_creator_change_on_delete_action/: up.sql
migrations/2023-10-22-000042_create_messages/: up.sql
migrations/2023-10-22-003654_create_message_files/: up.sql
migrations/2023-10-22-004309_create_court_cases/: down.sql  up.sql
migrations/2023-10-22-015916_drop_constraint_role_user_profiles/: down.sql
migrations/2023-10-22-020855_add_user_profiles_roles_type/: up.sql
migrations/2023-10-22-022900_drop_default_on_user_profiles/: down.sql  up.sql
migrations/2023-10-22-024826_add_default_for_role_in_user_profiles/: down.sql  up.sql
migrations/2023-10-22-025701_drop_constraint_decision_court_cases/: down.sql  up.sql
migrations/2023-10-22-030225_create_decision_type/: down.sql  up.sql
migrations/2023-10-22-031333_drop_constraint_kind_court_cases/: up.sql
migrations/2023-10-22-032030_change_kind_type_to_enum/: down.sql  up.sql
migrations/2023-10-22-032745_create_services/: up.sql
migrations/2023-10-22-033629_create_court_sides_kinds/: down.sql  up.sql
migrations/2023-10-22-034049_create_court_sides_case_statuses/: down.sql
migrations/2023-10-22-034339_create_court_sides/: down.sql
migrations/2023-10-22-035202_create_law_transactions/: down.sql
src/: main.rs  schema.rs
(+74 files in other folders)
