[package]
name = "security-db-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
env_logger = "0.10.0"
futures-util = { version = "0.3.29", features = ["std"] }
jsonwebtoken = { version = "9.1.0", default-features = false }
log = "0.4.20"
redis = { version = "0.23.3", features = ["r2d2", "ahash"] }
rust-argon2 = { version = "2.0.0", features = ["serde"] }
serde = "1.0.190"
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
validator = { version = "0.12", features = ["derive"] }
